@@ -1,6 +1,9 @@
 2012-09-06  Borut Razem  <borutr@users.sourceforge.net>
   * gpasm/gperror.c, gpasm/directive.c, gpasm/expression.c:
     GPE_NOSYM gperror to gpverror conversion
+  * gpasm/directive.c, gpasm/gperror.c, gpasm/gperror.h:
+    implemented feature request #59 - "Warning message for branching
+    before macros"
 
 2012-09-03  Borut Razem  <borutr@users.sourceforge.net>
   * gpasm/scan.l, gpasm/parse.y, gpasm/macro.c, gpasm/macro.h,
